--- a/Dropdowns/Dropdowns.csproj
+++ b/Dropdowns/Dropdowns.csproj
@@ -127,7 +127,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\SignUp\Index.cshtml" />
+    <Content Include="Views\SignUp\SignUp.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\SignUp\Done.cshtml" />
   </ItemGroup>
